# hydro_tools

./: .gitignore
cqa/: .gitignore  README.md  analysis.md  continuation_prompt.md  pyproject.toml
cqa/cqa/: __init__.py  closed_loop.py  config.py  controller.py  decision_matrix.py  drift.py  excursion.py  extreme_value.py  gangway.py  online_estimator.py  operability_polar.py  operator_view.py  psd.py  rao.py  sea_spreading.py  sea_state_relations.py  signal_processing.py  time_series_realisation.py  transient.py  vessel.py  wave_response.py  wcfdi_mc.py  wcfdi_self_mc.py
cqa/scripts/: decorrelation_time_diagnostic.py  diagnose_bistability_spaghetti.py  diagnose_dL_running_max_bias.py  diagnose_rice_validity.py  run_decision_matrix_demo.py  run_operability_polar_demo.py  run_operator_summary_demo.py  run_polar_demo.py  run_prior_vs_posterior_demo.py  run_rao_smoke.py  run_wcfdi_mc_demo.py  run_wcfdi_polar_demo.py  run_wcfdi_transient_demo.py  sigma_convergence_sweep.py  validate_T_var_empirically.py  validate_bandsplit.py  validate_radial_combine.py  validate_running_max_cdf.py
cqa/tests/: test_closed_loop.py  test_decision_matrix.py  test_drift.py  test_extreme_value.py  test_gangway.py  test_online_estimator.py  test_operability_polar.py  test_operator_view.py  test_sea_spreading.py  test_signal_processing.py  test_time_series_realisation.py  test_transient.py  test_wave_response.py  test_wcfdi_mc.py
roll_reduction_tanks/: .gitignore  README.md  pyproject.toml
roll_reduction_tanks/docs/: utube_derivation.md
roll_reduction_tanks/examples/: csov_gm_sweep.py  (+12 more)
(+315 files in other folders)
