[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roll_reduction_tanks"
version = "0.1.0"
description = "Time-domain prototype simulator for roll-reduction tanks (open U-tube, air-valve U-tube, free-surface, pendulum) coupled to a 1-DOF roll vessel driven by pdstrip RAOs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["roll_reduction_tanks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
